# coffee

./: .coverage  .flake8  .gitignore  .readthedocs.yaml  README.md  coverage.xml  requirements.txt  runtests.py  setup.cfg  tox.ini
.github/workflows/: main.yml
coffee/: __init__.py  exceptions.py  requirements.txt  setup.cfg  urls.py  views.py
coffee/contrib/: __init__.py  decorators.py  helpers.py
coffee/contrib/render/: __init__.py  components.py  definitions.py  functions.py
coffee/contrib/typescript/: functions.py
coffee/management/commands/: create_typescript_interfaces.py
coffee/util/: decorators.py  definitions.py  functions.py
coffee/util/contrib/parse/: functions.py
coffee/util/contrib/render/: __init__.py  components.py  definitions.py  functions.py
coffee/util/contrib/typescript/: __init__.py  functions.py
docs/: conf.py  index.rst
docs/source/: coffee.contrib.parse.rst  coffee.contrib.render.rst  coffee.contrib.rst  coffee.contrib.typescript.rst  coffee.management.commands.rst  coffee.management.rst  coffee.rst  endpoints.rst  faq.rst  limitations.rst  modules.rst  patterns.rst  quickstart.rst
docs/source/coffee/: coffee.contrib.rst  coffee.exceptions.rst  coffee.management.commands.rst  coffee.management.rst
docs/source/coffee/contrib/: coffee.contrib.decorators.rst  coffee.contrib.helpers.rst  coffee.contrib.parse.rst  coffee.contrib.render.rst  coffee.contrib.typescript.rst
tests/: conftest.py  models.py  test_views.py
