[metadata]
name = django-coffee-tools
version = 0.1.2
description = A ready to use Django app that provides expandable Django admin tools and other quality of life tools
url = https://github.com/marzukia/coffee
author = Andryo Marzuki
author_email = andryo@mrzk.io
license = BSD-3-Clause
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.6
install_requires =
    Django >= 3.0
